--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <ul>
         <li class="category"><%= link_to "Tumblr_lookAlike", root_path %></li>
         <li><%= link_to "Posts", root_path %></li>
-        <li>About</li>
+        <li><%= link_to "About", about_path %></li>
       </ul>
 
       <p class="sign_in">User Login</p>
@@ -23,8 +23,14 @@
 
     <div id="main_content">
       <div id="header">
-        <p>Post Feed</p>
-        <div>
+        <% if current_page?(root_path) %>
+          <p>Post Feed</p>
+        <% elsif current_page?(about_path) %>
+          <p>My Site</p>
+        <% else %>
+          <% link_to "Back to Post Feed", root_path %>
+        <% end %>
+        <div class="buttons">
           <button class="button"><%= link_to "Make Post", new_post_path %></button>
           <button class="button">Log Out</button>
         </div>
@@ -32,6 +38,7 @@
       <% flash.each do |name, msg| %>
         <%= content_tag(:div,msg, class: "alert") %>
       <% end %>
+      
       <%= yield %>
     </div>
   </body>
